--- a/src/lk/ijse/D24_hostel_Management_System/view/DashboardForm.fxml
+++ b/src/lk/ijse/D24_hostel_Management_System/view/DashboardForm.fxml
@@ -9,6 +9,11 @@
 
 <AnchorPane fx:id="DashboardForm" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #BCC4F6;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.D24_hostel_Management_System.controller.DashboardFormController">
    <children>
+      <Button layoutX="439.0" layoutY="60.0" mnemonicParsing="false" onAction="#checkAvailableRoomsOnaction" prefHeight="108.0" prefWidth="128.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
       <Button layoutX="379.0" layoutY="318.0" mnemonicParsing="false" text="LogoutTo view Registerd students">
          <cursor>
             <Cursor fx:constant="HAND" />
@@ -21,7 +26,7 @@
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor></Button>
-      <ImageView fitHeight="108.0" fitWidth="128.0" layoutX="260.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="99.0" fitWidth="99.0" layoutX="266.0" layoutY="65.0" onMouseClicked="#OnStudent" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assests/manageStudent.png" />
          </image>
@@ -38,18 +43,13 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Button layoutX="439.0" layoutY="60.0" mnemonicParsing="false" onAction="#checkAvailableRoomsOnaction" prefHeight="108.0" prefWidth="128.0">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
       <ImageView fitHeight="108.0" fitWidth="128.0" layoutX="324.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true" />
       <Button layoutX="324.0" layoutY="223.0" mnemonicParsing="false" prefHeight="108.0" prefWidth="128.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <ImageView fitHeight="108.0" fitWidth="128.0" layoutX="65.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="99.0" fitWidth="108.0" layoutX="69.0" layoutY="61.0" onMouseClicked="#manageRooms" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assests/availableRoom.png" />
          </image>
@@ -59,12 +59,12 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <ImageView fitHeight="108.0" fitWidth="128.0" layoutX="162.0" layoutY="223.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="99.0" fitWidth="99.0" layoutX="169.0" layoutY="231.0" onMouseClicked="#RoomReservation" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assests/BookingRoom.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="108.0" fitWidth="128.0" layoutX="447.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="99.0" fitWidth="107.0" layoutX="452.0" layoutY="69.0" onMouseClicked="#checkAvailableRooms" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@assests/manageRoom.png" />
          </image>
